--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .fullscreen-container {
-  background-image: url('https://www.dropbox.com/scl/fi/h8rpjs220906yos05en5g/mountain-wolves.jpeg?rlkey=omnh97cntwh21low438a4uwn3&raw=1');
+  background-image: url('https://picsum.photos/2500/1500?image=1041');
   min-height: 100vh;
   width: 100vw;
   background-size: cover;
