--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ body {
 /*Next, target the .fullscreen-container class and specify your background image URL:*/
 
 .fullscreen-container {
-  background-image: url('https://www.dropbox.com/scl/fi/h8rpjs220906yos05en5g/mountain-wolves.jpeg?rlkey=omnh97cntwh21low438a4uwn3&raw=1');
+  background-image: url('https://picsum.photos/2500/1500?image=1041');
 
 }
 /*You can get free beautiful background image on site like unsplash and pexels*/
